# kshisen

./: .clang-format  .flatpak-manifest.json  .gitignore  .kde-ci.yml  CMakeLists.txt  ChangeLog  Doxyfile  Doxyfile.includePrivate  Mainpage.dox  Makefile.am  Makefile.in  Messages.sh  TODO  app.cpp  app.h  board.cpp  board.h  debug.h  kshisen.categories  kshisen.desktop  kshisen.kcfg  kshisen.kdelnk  kshisen.xpm  kshisenui.rc  large-kshisen.xpm  main.cpp  mini-kshisen.xpm  org.kde.kshisen.appdata.xml  org.kde.kshisen.desktop  prefs.kcfgc  settings.ui  snapcraft.yaml  tileset.cpp  tileset.h  version.h
doc/: CMakeLists.txt  Makefile.am  index-1.html  index-2.html  index.cvlog  index.docbook  index.html  index.nif  index.sgml  kshisen.html  score-formula.tex
icons/: CMakeLists.txt
pics/: CMakeLists.txt  Makefile.am  kshisen.xpm  kshisen_bgnd.xpm  mask.xpm  paused.xpm
po/af/: kshisen.po
po/ar/: kshisen.po
po/ast/: kshisen.po
po/be/: kshisen.po
po/bg/: kshisen.po
po/bn/: kshisen.po
po/br/: kshisen.po
po/bs/: kshisen.po
po/ca/: kshisen.po
po/ca/docs/kshisen/: index.docbook
po/ca@valencia/: kshisen.po
po/cs/: kshisen.po
po/cs/docs/kshisen/: index.docbook
po/cy/: kshisen.po
po/da/: kshisen.po
po/de/: kshisen.po
po/de/docs/kshisen/: index.docbook
po/el/: kshisen.po
po/en_GB/: kshisen.po
po/eo/: kshisen.po
po/es/: kshisen.po
po/es/docs/kshisen/: index.docbook
po/et/: kshisen.po
po/et/docs/kshisen/: index.docbook
po/eu/: kshisen.po
po/fa/: kshisen.po
po/fi/: kshisen.po
po/fr/: kshisen.po
po/fr/docs/kshisen/: index.docbook
po/ga/: kshisen.po
po/gl/: kshisen.po
po/he/: kshisen.po
po/hi/: kshisen.po
po/hne/: kshisen.po
po/hr/: kshisen.po
po/hu/: kshisen.po
po/ia/: kshisen.po
po/id/: kshisen.po
po/is/: kshisen.po
po/it/: kshisen.po
po/it/docs/kshisen/: index.docbook
po/ja/: kshisen.po
po/ja/docs/kshisen/: index.docbook
po/ka/: kshisen.po
po/kk/: kshisen.po
po/km/: kshisen.po
po/ko/: kshisen.po
po/lt/: kshisen.po
po/lv/: kshisen.po
po/mai/: kshisen.po
po/mk/: kshisen.po
po/ml/: kshisen.po
po/mr/: kshisen.po
po/nb/: kshisen.po
po/nds/: kshisen.po
po/ne/: kshisen.po
po/nl/: kshisen.po
po/nl/docs/kshisen/: index.docbook
po/nn/: kshisen.po
po/oc/: kshisen.po
po/pa/: kshisen.po
po/pl/: kshisen.po
po/pl/docs/kshisen/: index.docbook
po/pt/: kshisen.po
po/pt/docs/kshisen/: index.docbook
po/pt_BR/: kshisen.po
po/pt_BR/docs/kshisen/: index.docbook
po/ro/: kshisen.po
po/ru/: kshisen.po
po/ru/docs/kshisen/: index.docbook
po/sa/: kshisen.po
po/se/: kshisen.po
po/sk/: kshisen.po
po/sl/: kshisen.po
po/sl/docs/kshisen/: index.docbook
po/sq/: kshisen.po
po/sr/: kshisen.po
po/sr@ijekavian/: kshisen.po
po/sr@ijekavianlatin/: kshisen.po
po/sr@latin/: kshisen.po
po/sv/: kshisen.po
po/sv/docs/kshisen/: index.docbook
po/ta/: kshisen.po
po/tg/: kshisen.po
po/th/: kshisen.po
po/tr/: kshisen.po
po/ug/: kshisen.po
po/uk/: kshisen.po
po/uk/docs/kshisen/: index.docbook
po/xh/: kshisen.po
po/zh_CN/: kshisen.po
po/zh_TW/: kshisen.po
sounds/: CMakeLists.txt
src/: CMakeLists.txt  app.cpp  app.h  board.cpp  board.h  commit.h  debug.h  kshisen.kcfg  kshisen.qrc  kshisen_debug.cpp  kshisen_debug.h  kshisenui.rc  main.cpp  move.cpp  move.h  penalty.h  playernamedlg.cpp  playernamedlg.h  playernamedlgwidget.ui  possiblemove.cpp  possiblemove.h  settings.ui  types.h  version.h
src/tests/: CMakeLists.txt  movetest.cpp  movetest.h
